forgot to gen swagger again, also tested it on localhost swagger ui, everything works so far before render.
