# swagger.json
@@ -121,6 +121,18 @@
             "schema": {
               "type": "object",
               "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "pokedexId": {
+                  "example": "any"
+                },
+                "type1": {
+                  "example": "any"
+                },
+                "type2": {
+                  "example": "any"
+                },
                 "favoriteColor": {
                   "example": "any"
                 }
